[package]
name = "simple-reply-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
log = "0.4.20"
env_logger = "0.10.0"
tokio = { version = "1.33.0", features = ["full"] }
grammers-client = { git = "https://github.com/ElXreno/grammers" }
grammers-session = { git = "https://github.com/ElXreno/grammers" }
anyhow = "1.0.80"
shellexpand = "3.1.0"
moka = { version = "0.12.5", features = ["future"] }
